# tcod-cpp-engine-2022

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: cmake.yml
emscripten/: index.html
src/: actor.hpp  combat.hpp  constants.hpp  data.hpp  distance.hpp  fov.hpp  globals.hpp  input_tools.hpp  item_tools.hpp  json.hpp  logic.hpp  main.cpp  mapgen.hpp  maptools.hpp  rendering.hpp  serialization.hpp  world.hpp  world_init.hpp  world_logic.hpp  xp.hpp
src/actions/: ai_basic.hpp  ai_confused.hpp  base.hpp  basic_ai.hpp  bump.hpp  pickup.hpp  use_item.hpp  use_stairs.hpp
src/items/: health_potion.hpp  scroll_confusion.hpp  scroll_fireball.hpp  scroll_lightning.hpp
src/pathfinding/: astar.hpp  dijkstra.hpp  map.hpp  pathfinding.hpp
src/procgen/: caves.hpp
src/states/: dead.hpp  ingame.hpp  levelup.hpp  main_menu.cpp  main_menu.hpp  menu.hpp  pick_inventory.hpp  pick_tile.hpp  pick_tile_aoe.hpp
src/types/: action.hpp  action_result.hpp  actor.hpp  actor_fwd.hpp  actor_id.hpp  controller.hpp  fixture.hpp  item.hpp  map.hpp  map_id.hpp  messages.hpp  ndarray.hpp  position.hpp  state.hpp  state_fwd.hpp  state_result.hpp  stats.hpp  world.hpp  world_fwd.hpp
